<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="#B7FBE5"
    tools:context="com.k_duskplayer.my.requestpage">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="55dp"
        android:ems="10"
        android:hint="@string/name"
        android:textColor="@android:color/black"
        android:inputType="textPersonName"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/sap_id"
        android:textColor="@android:color/black"
        android:inputType="textPersonName"
        android:textSize="20dp"/>


    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/buttonReq"
        android:layout_alignRight="@+id/buttonReq"
        android:layout_below="@+id/textView8"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:ems="10"
        android:hint="@string/item_name"
        android:textColor="@android:color/black"
        android:inputType="textPersonName"
        android:textSize="20dp" />


    <EditText
        android:id="@+id/editText10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText5"
        android:layout_alignBottom="@+id/editText5"
        android:layout_toEndOf="@+id/buttonReq"
        android:layout_toRightOf="@+id/buttonReq"
        android:ems="10"
        android:hint="Room:"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textSize="20dp" />

    <Button
        android:id="@+id/buttonReq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText11"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/rbtn"
        android:textColor="@android:color/white"
        android:text="@string/request" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText5"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/location"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textSize="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView10"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView10"
        android:layout_marginTop="38dp"
        android:text="@string/name"
        android:textSize="15dp"
        android:id="@+id/textView7" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText"
        android:layout_marginTop="17dp"
        android:text="@string/sap_id"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView10"
        android:layout_alignStart="@+id/textView10"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="17dp"
        android:text="@string/item_name"
        android:textSize="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText10"
        android:layout_toEndOf="@+id/editText5"
        android:layout_toRightOf="@+id/editText5"
        android:text="Room:"
        android:textSize="15dp"
        android:id="@+id/textView6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8"
        android:layout_below="@+id/editText5"
        android:layout_marginTop="17dp"
        android:text="@string/location"
        android:textSize="15dp"
        android:id="@+id/textView9" />

    <EditText
        android:id="@+id/editText11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText6"
        android:layout_alignStart="@+id/editText6"
        android:layout_below="@+id/textView13"
        android:ems="10"
        android:hint="How do we know it's yours?"
        android:textColor="@android:color/black"
        android:inputType="textPersonName"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText11"
        android:layout_alignStart="@+id/editText11"
        android:layout_below="@+id/editText6"
        android:layout_marginTop="17dp"
        android:text="Identification:"
        android:textSize="15dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView7"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/textView6"
        android:layout_toRightOf="@+id/textView6"
        android:src="@drawable/lossttth" />
</RelativeLayout>
